# soldervoid-detection

./: .gitignore  README.md  app.py  inference.py  main.py  pyproject.toml
backend/: inference_ops.py  mask_ops.py  metrics_ops.py  prepare_ops.py  resize_ops.py  train_ops.py
frontend/: main_window.py
frontend/pages/: home_page.py  inference_page.py  iou_page.py  labelme_page.py  mask_page.py  prepare_page.py  resize_page.py  train_page.py
frontend/workers/: inference_worker.py  iou_worker.py  mask_worker.py  prepare_worker.py  preview_worker.py  resize_worker.py  train_worker.py
